--- a/conf/.env
+++ b/conf/.env
@@ -1,6 +1,8 @@
 HBOX_MODE=production
 HBOX_WEB_PORT=__PORT__
 HBOX_WEB_HOST=
+HBOX_WEB_MAX_UPLOAD_SIZE=100
+
 HBOX_OPTIONS_ALLOW_REGISTRATION=true
 HBOX_OPTIONS_AUTO_INCREMENT_ASSET_ID=true
 HBOX_OPTIONS_ALLOW_ANALYTICS=false
